--- a/Regular Expression Reference/HomePage.html
+++ b/Regular Expression Reference/HomePage.html
@@ -32,8 +32,8 @@
 	<p>Matches any character except linebreaks.</p>
 </div>
 <div class="textstyle">
-	<p>/[A-z]/g</p>
-	<p>Matches a character having a character code between the two specified characters inclusive. Equal to [A-Za-z0-9_]</p>
+	<p>/\w/g</p>
+	<p>Matches any word character (alphanumeric & underscore). Only matches low-ascii characters (no accented or non-roman characters). Equivalent to [A-Za-z0-9_]</p>
 </div>
 <div class="retop">top</div>
 </body>
