--- a/Regular Expression Reference/HomePage.html
+++ b/Regular Expression Reference/HomePage.html
@@ -35,6 +35,83 @@
 	<p>/\w/g</p>
 	<p>Matches any word character (alphanumeric & underscore). Only matches low-ascii characters (no accented or non-roman characters). Equivalent to [A-Za-z0-9_]</p>
 </div>
+<div class="textstyle">
+    <p>/\W/g</p>
+	<p>Matches any character that is not a word character (alphanumeric & underscore). Equivalent to [^A-Za-z0-9_]</p>
+</div>
+<div class="textstyle">
+	<p>/\d/g</p>
+	<p>Matches any digit character (0-9). Equivalent to [0-9].</p>
+</div>
+<div class="textstyle">
+    <p>/\D/g</p>
+	<p>Matches any character that is not a digit character (0-9). Equivalent to [^0-9]</p>
+</div>
+<div class="textstyle">
+	<p>/\s/g</p>
+	<p>Matches any whitespace character (spaces, tabs, line breaks).</p>
+</div>
+<div class="textstyle">
+    <p>/\S/g</p>
+	<p>Matches any character that is not a whitespace character (spaces, tabs, line breaks).</p>
+</div>
+<div class="textstyle">
+	<p>/b(a|e|i)d/g</p>
+	<p>Acts like a boolean OR. Matches the expression before or after the |.
+It can operate within a group, or on a whole expression. The patterns will be tested in order.</p>
+</div>
+<div class="textstyle">
+    <p>/[^a]/g</p>
+	<p>Match any character that is not in the set.</p>
+</div>
+<div class="textstyle">
+    <p>/^[a]/g</p>
+	<p>Matches the beginning of the string, or the beginning of a line if the multiline flag (m) is enabled. This matches a position, not a character.</p>
+</div>
+<div class="textstyle">
+	<p>/[e]$/g</p>
+	<p>$: Matches the end of the string, or the end of a line if the multiline flag (m) is enabled. This matches a position, not a character.</p>
+</div>
+<div class="textstyle">
+	<p>/\0/g</p>
+	<p>Matches a NULL character (char code 0).</p>
+</div>
+<div class="textstyle">
+	<p>/*/g</p>
+	<p>Matches 0 or more of the preceding token.</p>
+</div>
+<div class="textstyle">
+	<p>/?/g</p>
+	<p>Matches 0 or 1 of the preceding token, effectively making it optional. Example: /JavaS?cript/gi => Javascript or Javacript</p>
+</div>
+<div class="textstyle">
+	<p>/\w{1,3}/g</p>
+	<p>Matches the specified quantity of the previous token. {1,3} will match 1 to 3. {3} will match exactly 3. {3,} will match 3 or more.</p>
+</div>
+<div class="textstyle">
+	<p>/\b/g</p>
+	<p>Matches a word boundary position between a word character and non-word character or position (start / end of string). See the word character class (w) for more info.</p>
+</div>
+<div class="textstyle">
+	<p>/\B/g</p>
+	<p>Matches any position that is not a word boundary. This matches a position, not a character.</p>
+</div>
+<div class="textstyle">
+	<p>/(abc)/g</p>
+	<p>Groups multiple tokens together and creates a capture group for extracting a substring or using a backreference.</p>
+</div>
+<div class="textstyle">
+	<p>/(abc)\1/g</p>
+	<p>Matches the results of a capture group. For example \1 matches the results of the first capture group & \3 matches the third.</p>    
+</div>
+<div class="textstyle">
+	<p>/(?:ha)+/g</p>
+	<p>Matches the results of a capture group. For example \1 matches the results of the first capture group & \3 matches the third.</p>
+</div>
+<div class="textstyle">
+	<p>/(?!ha)+/g</p>
+	<p>Matches the results of a capture group. For example \1 matches the results of the first capture group & \3 matches the third.</p>
+</div>
 <div class="retop">top</div>
 </body>
 <script src="js/Javascript.js"></script>
