Update Canvas Basic

--- a/Canvas/Basic/HomePage.html
+++ b/Canvas/Basic/HomePage.html
@@ -4,9 +4,32 @@
 <meta charset="utf-8">
 <title>Canva Basic</title>
 </head>
-
-<body>
-	<canvas id="first" width="200px" height="100px"></canvas>
+<body style="display:flex;">
+	<div style="text-align: center; width: 33.3333%">
+		<canvas id="first" width="350px" height="100px"></canvas>
+		<p>Rectangle</p>
+		<canvas id="second" width="200px" height="100px" style="border:1px solid #ff0000"></canvas>
+		<p>Line</p>
+		<canvas id="third" width="200px" height="200px" style="border:1px solid #000000"></canvas>
+		<p>Circle</p>
+	</div>
+	<div style="text-align: center; width: 33.3333%">
+		<canvas id="fourth" width="350px" height="100px"></canvas>
+		<p>Gradient</p>
+		<canvas id="fifth" width="350px" height="100px" style="border:1px solid #ff0000"></canvas>
+		<p>Radial Gradient</p>
+		<canvas id="sixth" width="350px" height="100px" style="border:1px solid #000000"></canvas>
+		<p>Text</p>
+	</div>
+	<script src="js/Javascript.js"></script>
+	<div style="text-align: center; width: 33.3333%">
+		<canvas id="seventh" width="350px" height="100px"></canvas>
+		<p>Stroke Text</p>
+		<canvas id="eighth" width="350px" height="100px" style="border:1px solid #ff0000"></canvas>
+		<p>Rectangle Shadow</p>
+		<canvas id="ninth" width="350px" height="100px"></canvas>
+		<p>Stroke Rectangle</p>
+	</div>
 	<script src="js/Javascript.js"></script>
 </body>
 </html>
