--- a/Canvas/Click Change Color and Width/HomePage.html
+++ b/Canvas/Click Change Color and Width/HomePage.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 <canvas id="myCon" width="200px" height="100px" style="border:1px solid #000000"></canvas>
+<canvas id="myCradient" width="200px" height="100px" style="border:1px solid #000000"></canvas>
+<canvas id="myLine" width="200px" height="100px" style="border:1px solid #000000"></canvas>
+<canvas id="myImage" width="200px" height="100px" style="border:1px solid #000000"></canvas>
 <script src="js/Javascript.js"></script>
 </body>
 </html>
