--- a/Canvas/Click Change Color and Width/HomePage.html
+++ b/Canvas/Click Change Color and Width/HomePage.html
@@ -5,10 +5,13 @@
 <title>Click Change Color and Width</title>
 </head>
 <body>
+<div><img id="toMine" src="bubble.jpg" alt="test"></div>
 <canvas id="myCon" width="200px" height="100px" style="border:1px solid #000000"></canvas>
 <canvas id="myCradient" width="200px" height="100px" style="border:1px solid #000000"></canvas>
 <canvas id="myLine" width="200px" height="100px" style="border:1px solid #000000"></canvas>
 <canvas id="myImage" width="200px" height="100px" style="border:1px solid #000000"></canvas>
+<canvas id="myText" width="200px" height="100px" style="border:1px solid #000000"></canvas>
+<canvas id="quadratic" width="200px" height="100px" style="border:1px solid #000000"></canvas>
 <script src="js/Javascript.js"></script>
 </body>
 </html>
