--- a/Logic/Back To Top/HomePage.html
+++ b/Logic/Back To Top/HomePage.html
@@ -3,55 +3,12 @@
 <head>
 <meta charset="utf-8" />
 <title>Back To Top</title>
+<link href="css/home.css" rel="stylesheet">
+<script src="js/jquery-3.5.1.min.js"></script>
 </head>
-<style>
-body{
-	margin: 0;
-}
-#bgContent {
-	margin: 0 auto;
-	width: 100%;
-	height: 2000px;
-	background-color: #ff8800;
-	text-align:center;
-	align-item:middle;
-}
-#bgContent h1 {
-	display:initial;
-}
-#top {
-	position:fixed;
-	bottom: 30px;
-	right: 25px;
-	background-color: #880000;
-	width: 60px;
-	height: 60px;
-	text-align:center;
-	margin: 0 auto;
-	display: none;
-}
-#top span {
-	position: relative;
-	top:21px;
-	color: #ffffff;
-}
-</style>
 <body>
 <div id="bgContent"><h1>Luckydesigner.space</h1></div>
 <p id="top"><span>TOP</span></p>
+<script src="js/Javascript.js"></script>
 </body>
-<script>
-var getTop = document.getElementById("top");
-window.onscroll = function(){
-	if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-    getTop.style.display = "block";
-  } else {
-    getTop.style.display = "none";
-  }
-}
-getTop.addEventListener("click", function(){
-	document.body.scrollTop = 0;//Safari to use.
-	document.documentElement.scrollTop = 0;//Chrome, Firefox, Internet Explore and Opra.
-})
-</script>
 </html>
