Add jQuery Version

--- a/DOM/Tags Add Title/HomePage.html
+++ b/DOM/Tags Add Title/HomePage.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Tags Add Title</title>
+<script src="js/jquery-3.5.1.min.js"></script>
 </head>
 
 <body>
@@ -11,6 +12,6 @@
         <p>Green</p>
         <p>Blue</p>
     </div>
-<script type="text/javascript" src="Javascript.js"></script>
+<script type="text/javascript" src="js/Javascript.js"></script>
 </body>
 </html>
