--- a/Dates/Timer Change Colors/HomePage.html
+++ b/Dates/Timer Change Colors/HomePage.html
@@ -4,9 +4,10 @@
 <meta charset="utf-8">
 <title>Timer Change Colors</title>
 <link href="css/home.css" rel="stylesheet"/>
-<script src="js/Javascript.js"></script>
+<script src="js/jquery-3.5.1.min.js"></script>
 </head>
 <body>
 	<div id="timer"></div>
+<script src="js/Javascript.js"></script>
 </body>
 </html>
