--- a/Dates/How Many Days in This Month/HomePage.html
+++ b/Dates/How Many Days in This Month/HomePage.html
@@ -7,7 +7,7 @@
 <body>
 Month:
 <input type="text" id="month">
-<input id="subm" type="button" value="查询">
+<input id="subm" type="button" value="search">
 </body>
 <script>
     var getMon = document.getElementById("subm");
