--- a/Events/Input Text and Return/HomePage.html
+++ b/Events/Input Text and Return/HomePage.html
@@ -8,6 +8,9 @@ body {
 	width: 100%;
 	height: auto;
 }
+	h1{
+		text-align: center;
+	}
 .container {
 	width: 200px;
 	height: 500px;
@@ -22,9 +25,10 @@ span {
 	opacity: 20%;
 }
 </style>
-<script src="js/JavaScript.js"></script>
+<script src="js/jquery-3.5.1.min.js"></script>
 </head>
 <body>
+	<h1>Please Input At Least One Digit Number</h1>
     <div class="container"> 
     <span>text1</span>
     <input type="text" value="" />
@@ -32,5 +36,6 @@ span {
     <input type="text" value="" />
     <button>Try it</button>
 	</div>
+<script src="js/JavaScript.js"></script>
 </body>
 </html>
