--- a/Dates/How Many Days in This Month/HomePage.html
+++ b/Dates/How Many Days in This Month/HomePage.html
@@ -3,12 +3,15 @@
 <head>
 <meta charset="utf-8" />
 <title>How many days this month</title>
+<script src="js/jquery-3.5.1.min.js"></script>
 </head>
 <body>
+<h1>How Many Days This Month</h1>
+Year:
+<input type="text" id="year">
 Month:
 <input type="text" id="month">
 <input id="subm" type="button" value="search">
 <script src="js/Javascript.js"></script>
-<script src="js/jquery-3.5.1.min.js"></script>
 </body>
 </html>
