--- a/Loops/Slider Auto Show/HomePage.html
+++ b/Loops/Slider Auto Show/HomePage.html
@@ -4,12 +4,13 @@
 <meta charset="utf-8">
 <title>Slider Auto Show</title>
 <link type="text/css" rel="stylesheet" href="css/home.css">
+<script src="js/jquery-3.5.1.min.js"></script>
 </head>
 <body>
 <div class="slideshow-box">
-  <div class="slider"> <img src="https://raw.githubusercontent.com/zhangboheng/Javascript-Practise-Easy-Examples/main/Mouse%20Change%20Opacity/images/1.jpg"/> </div>
-  <div class="slider"> <img src="https://raw.githubusercontent.com/zhangboheng/Javascript-Practise-Easy-Examples/main/Mouse%20Change%20Opacity/images/2.jpg"/> </div>
-  <div class="slider"> <img src="https://raw.githubusercontent.com/zhangboheng/Javascript-Practise-Easy-Examples/main/Mouse%20Change%20Opacity/images/3.jpg"/> </div>
+  <div class="slider"> <img src="https://github.com/zhangboheng/Javascript-Practise-Easy-Examples/blob/main/Loops/Mouse%20Change%20Opacity/images/1.jpg?raw=true" alt="BMW"/> </div>
+  <div class="slider"> <img src="https://github.com/zhangboheng/Javascript-Practise-Easy-Examples/blob/main/Loops/Mouse%20Change%20Opacity/images/2.jpg?raw=true" alt="ROMEO"/> </div>
+  <div class="slider"> <img src="https://github.com/zhangboheng/Javascript-Practise-Easy-Examples/blob/main/Loops/Mouse%20Change%20Opacity/images/3.jpg?raw=true" alt="SKODA"/> </div>
 </div>
 </body>
 <script src="js/home.js"></script>
