--- a/Logic/Toggle List/HomePage.html
+++ b/Logic/Toggle List/HomePage.html
@@ -3,32 +3,9 @@
 <head>
 <meta charset="utf-8">
 <title>Toggle List</title>
+<link href="css/home.css" rel="stylesheet"/>
+<script src="js/jquery-3.5.1.min.js"></script>
 </head>
-
-<style>
-.accordion {
-    background-color: #ff8800;
-    color: #ffffff;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    text-align: left;
-    border: none;
-    outline: none;
-    transition: 0.4s;
-	border-bottom:1px solid #000000;
-}
-.accordion:hover {
-    background-color: #991100;
-}
-.panel {
-    padding: 0 18px;
-    background-color: #eee;
-    display: none;
-    overflow: hidden;
-	border:1px solid #000000;
-}
-</style>
 <body>
 <button class="accordion">Title1</button>
 <div class="panel">
@@ -45,15 +22,6 @@
 <div class="panel">
   <p>Son of a bitch!</p>
 </div>
+<script src="js/Javascript.js"></script>
 </body>
-<script>
-	var toClick = document.getElementsByClassName("accordion");
-	var toPanel = document.getElementsByClassName("panel");
-	for(i=0; i<toClick.length; i++){
-		toClick[i].addEventListener("click", function(){
-			var panel = this.nextElementSibling;
-    		panel.style.display === "block" ? panel.style.display = "none" : panel.style.display = "block";
-		})
-	}
-</script>
 </html>
