--- a/jQuery/Selectors Practise/HomePage.html
+++ b/jQuery/Selectors Practise/HomePage.html
@@ -49,81 +49,64 @@
 	<p>All elements that are the last child of their parent; Example: <span>$("span:last-child")</span></p>
 </div>
 <div class="textstyle">
-	<p>/\s/g</p>
-	<p>Matches any whitespace character (spaces, tabs, line breaks).</p>
+	<p>$(":first-of-type")</p>
+	<p>Select every element that is the first element of its parent; Example: <span>$("span:first-of-type")</span></p>
 </div>
 <div class="textstyle">
-    <p>/\S/g</p>
-	<p>Matches any character that is not a whitespace character (spaces, tabs, line breaks).</p>
+    <p>$(":last-of-type")</p>
+	<p>Select every element that is the first element of its parent; Example: <span>$("span:last-of-type")</span></p>
 </div>
 <div class="textstyle">
-	<p>/b(a|e|i)d/g</p>
-	<p>Acts like a boolean OR. Matches the expression before or after the |.
-It can operate within a group, or on a whole expression. The patterns will be tested in order.</p>
+	<p>$(":nth-child(n)")</p>
+	<p>All elements that are the n child of their parent; Example: <span>$("p:nth-child(1)")</span></p>
 </div>
 <div class="textstyle">
-    <p>/[^a]/g</p>
-	<p>Match any character that is not in the set.</p>
+    <p>$(":nth-last-child(n)")</p>
+	<p>All elements that are the 2nd child of their parent, counting from the last child; Example: <span>$("p:nth-last-child(2)")</span></p>
 </div>
 <div class="textstyle">
-    <p>/^[a]/g</p>
-	<p>Matches the beginning of the string, or the beginning of a line if the multiline flag (m) is enabled. This matches a position, not a character.</p>
+    <p>$(":nth-of-type(n)")</p>
+	<p>All elements that are the 2nd element of their parent; Example: <span>$("span:nth-of-type(1)")</span></p>
 </div>
 <div class="textstyle">
-	<p>/[e]$/g</p>
-	<p>$: Matches the end of the string, or the end of a line if the multiline flag (m) is enabled. This matches a position, not a character.</p>
+	<p>$(":nth-last-of-type(n)")</p>
+	<p>All elements that are the 2nd element of their parent, counting from the last child; Example: <span>$("span:nth-last-of-type(1)")</span></p>
 </div>
 <div class="textstyle">
-	<p>/\0/g</p>
-	<p>Matches a NULL character (char code 0).</p>
+	<p>$(":only-child")</p>
+	<p>Select each element that is the only child of its parent; Example: <span>$("span:only-child")</span></p>
 </div>
 <div class="textstyle">
-	<p>/*/g</p>
-	<p>Matches 0 or more of the preceding token.</p>
+	<p>$(":only-of-type")</p>
+	<p>All elements that are the only child, of its type, of their parent; Example: <span>$("only-of-type")</span></p>
 </div>
 <div class="textstyle">
-	<p>/?/g</p>
-	<p>Matches 0 or 1 of the preceding token, effectively making it optional. Example: /JavaS?cript/gi =&gt; Javascript or Javacript</p>
+	<p>$("parent&gt;child")</p>
+	<p>All parent elements that are a direct child of a parent element;  Example: <span>$("#textstyle1&gt;p")</span></p>
 </div>
 <div class="textstyle">
-	<p>/\w{1,3}/g</p>
-	<p>Matches the specified quantity of the previous token. {1,3} will match 1 to 3. {3} will match exactly 3. {3,} will match 3 or more.</p>
+	<p>$("parent child")</p>
+	<p>All elements that are descendants of a element; Example: <span>$("#textstyle1 p")</span></p>
 </div>
 <div class="textstyle">
-	<p>/\b/g</p>
-	<p>Matches a word boundary position between a word character and non-word character or position (start / end of string). See the word character class (w) for more info.</p>
+	<p>$("element + element")</p>
+	<p>The element that are next to each elements; Example: <span>$(".textstyle + p")</span></p>
 </div>
 <div class="textstyle">
-	<p>/\B/g</p>
-	<p>Matches any position that is not a word boundary. This matches a position, not a character.</p>
+	<p>$("element ~ element")</p>
+	<p>All elements that appear after the element; Example: <span>$(".textstyle1 ~ div")</span></p>
 </div>
 <div class="textstyle">
-	<p>/(abc)/g</p>
-	<p>Groups multiple tokens together and creates a capture group for extracting a substring or using a backreference.</p>
+	<p>$("parent child:eq(n)")</p>
+	<p>	The element in a list (index starts at 0); Example: <span>$(".textstyle p : eq(1)")</span></p>
 </div>
 <div class="textstyle">
-	<p>/(abc)\1/g</p>
-	<p>Matches the results of a capture group. For example \1 matches the results of the first capture group &amp; \3 matches the third.</p>    
+	<p>$("parent child:gt(0)")</p>
+	<p>List elements with an index greater than 0; Example: <span>$(".textstyle p : gt(0)")</span></p>    
 </div>
 <div class="textstyle">
-	<p>/(?:ha)+/g</p>
-	<p>Groups multiple tokens together without creating a capture group.</p>
-</div>
-<div class="textstyle">
-	<p>/(?!ha)+/g</p>
-	<p>Specifies a group that can not match after the main expression (if it matches, the result is discarded).</p>
-</div>
-<div class="textstyle">
-	<p>/\t/g</p>
-	<p>Matches a TAB character (char code 9).</p>
-</div>
-<div class="textstyle">
-	<p>/\r/g</p>
-	<p>Matches a CARRIAGE RETURN character (char code 13).</p>
-</div>
-<div class="textstyle">
-	<p>/\n/g</p>
-	<p>Matches a LINE FEED character (char code 10).</p>
+	<p>$("parent child:lt(1)")</p>
+	<p>List elements with an index lower than 1; Example: <span>$(".textstyle p : lt(1)")</span></p>
 </div>
 <script src="js/Javascript.js"></script>
 </body>
