Update A Code Map Demo

--- a/Demo/The Code Map/HomePage.html
+++ b/Demo/The Code Map/HomePage.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Pull Push Bar</title>
+<title>The Code Map</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="css/home.css" rel="stylesheet">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="js/jquery-3.5.1.min.js"></script>
 </head>
 
 <body>
@@ -20,6 +20,33 @@
   <button class="third-button">Click Me</button>
   <button class="fourth-button">Click Me</button>
   <button class="fifth-button">Click Me</button>
+</div>
+<div class="solid-bar">
+	<i class="icon"><img src="img/clock.png" alt="thisTime"></i><span></span>
+	<ul class="code-list">
+		<li>HTML</li>
+		<li>CSS</li>
+		<li>Javascript</li>
+		<li>jQuery</li>
+		<li>PHP</li>
+		<li>Python</li>
+		<li>Java</li>
+		<li>C++</li>
+		<li>C#</li>
+		<li>C</li>
+		<li>Go</li>
+		<li>R</li>
+		<li>Lua</li>
+		<li>Ruby</li>
+		<li>Swift</li>
+		<li>Visual Basic</li>
+		<li>Node.js</li>
+		<li>SQL</li>
+		<li>PHP</li>
+		<li>Windows</li>
+		<li>Linux</li>
+		<li>MacOS</li>
+	</ul>
 </div>
 <script src="js/Javascript.js"></script>
 </body>
