--- a/Demo/The Code Map/HomePage.html
+++ b/Demo/The Code Map/HomePage.html
@@ -39,7 +39,34 @@
 		<li>Lua</li>
 		<li>Ruby</li>
 		<li>Swift</li>
-		<li>Visual Basic</li>
+		<li>VB</li>
+		<li>Node.js</li>
+		<li>SQL</li>
+		<li>PHP</li>
+		<li>Windows</li>
+		<li>Linux</li>
+		<li>MacOS</li>
+	</ul>
+</div>
+<div class="msolid-bar">
+	<canvas id="retangle-menu" width="60px" height="60px">You're browser is not support canvas, you should use other browsers</canvas>
+	<ul class="mcode-list">
+		<li>HTML</li>
+		<li>CSS</li>
+		<li>Javascript</li>
+		<li>jQuery</li>
+		<li>PHP</li>
+		<li>Python</li>
+		<li>Java</li>
+		<li>C++</li>
+		<li>C#</li>
+		<li>C</li>
+		<li>Go</li>
+		<li>R</li>
+		<li>Lua</li>
+		<li>Ruby</li>
+		<li>Swift</li>
+		<li>VB</li>
 		<li>Node.js</li>
 		<li>SQL</li>
 		<li>PHP</li>
