Update The Code Map Website

--- a/Demo/The Code Map/HomePage.html
+++ b/Demo/The Code Map/HomePage.html
@@ -22,7 +22,7 @@
   <button class="fifth-button">Click Me</button>
 </div>
 <div class="solid-bar">
-	<i class="icon"><img src="img/clock.png" alt="thisTime"></i><span></span>
+	<i class="icon"><img src="img/clock.png" alt="thisTime"></i><span></span>&nbsp;&nbsp;
 	<ul class="code-list">
 		<li>HTML</li>
 		<li>CSS</li>
@@ -48,9 +48,11 @@
 		<li>MacOS</li>
 	</ul>
 </div>
+<div class="top-banner"><p>12345</p></div>
 <div class="msolid-bar">
 	<canvas id="retangle-menu" width="60px" height="60px">You're browser is not support canvas, you should use other browsers</canvas>
 	<ul class="mcode-list">
+		<li>TheCodeMap.com</li>
 		<li>HTML</li>
 		<li>CSS</li>
 		<li>Javascript</li>
