Update The Code Map Demo

--- a/Demo/The Code Map/HomePage.html
+++ b/Demo/The Code Map/HomePage.html
@@ -15,7 +15,7 @@
   <div class="menu-top3"></div>
   <div class="menu-top4"></div>
   <div class="menu-top5"></div>
-  <button class="first-button">↓ Pull Down</button>
+  <button class="first-button">↓ Pull</button>
   <button class="second-button">Click Me</button>
   <button class="third-button">Click Me</button>
   <button class="fourth-button">Click Me</button>
@@ -48,9 +48,8 @@
 		<li>MacOS</li>
 	</ul>
 </div>
-<div class="top-banner"><p>12345</p></div>
 <div class="msolid-bar">
-	<canvas id="retangle-menu" width="60px" height="60px">You're browser is not support canvas, you should use other browsers</canvas>
+	<canvas id="retangle-menu" width="50px" height="50px">You're browser is not support canvas, you should use other browsers</canvas>
 	<ul class="mcode-list">
 		<li>TheCodeMap.com</li>
 		<li>HTML</li>
@@ -75,6 +74,33 @@
 		<li>Windows</li>
 		<li>Linux</li>
 		<li>MacOS</li>
+	</ul>
+</div>
+<div class="top-banner">
+	<h1>The Code Map</h1>
+</div>
+<div class="top-banner-button">
+	<button>Random Knowledge</button>
+</div>
+<div class="middle-list">
+	<h2>WEB</h2>
+	<ul class="web-map">
+		<li><h4>Beginner:</h4></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+		<li><a href="https://www.sololearn.com/" title="SoloLearn: Learn to Code for Free!">Sololearn</a></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+	</ul>
+	<ul class="web-map">
+		<li><h4>Intermediate:</h4></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+	</ul>
+	<ul class="web-map">
+		<li><h4>Advanced:</h4></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
 	</ul>
 </div>
 <script src="js/Javascript.js"></script>
