--- a/Demo/The Code Map/HomePage.html
+++ b/Demo/The Code Map/HomePage.html
@@ -2,7 +2,9 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>The Code Map</title>
+<title>The Code Map：Learn Your First Line Code From This Page</title>
+<meta name="keywords" content="Html, CSS, Javascript, jQuery, PHP, Canvas, Vue.js, Python, C, C#, C++, Visual Basic, Java……">
+<meta name="description" content="Learn how to code, from The Code Map">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="css/home.css" rel="stylesheet">
 <script src="js/jquery-3.5.1.min.js"></script>
@@ -24,11 +26,11 @@
 <div class="solid-bar">
 	<i class="icon"><img src="img/clock.png" alt="thisTime"></i><span></span>&nbsp;&nbsp;
 	<ul class="code-list">
-		<li>HTML</li>
-		<li>CSS</li>
-		<li>Javascript</li>
-		<li>jQuery</li>
-		<li>PHP</li>
+		<li><a href="#html">HTML</a></li>
+		<li><a href="#css">CSS</a></li>
+		<li><a href="#javascript">Javascript</a></li>
+		<li><a href="#jquery">jQuery</a></li>
+		<li><a href="#php">PHP</a></li>
 		<li>Python</li>
 		<li>Java</li>
 		<li>C++</li>
@@ -42,7 +44,7 @@
 		<li>VB</li>
 		<li>Node.js</li>
 		<li>SQL</li>
-		<li>PHP</li>
+		<li>Vue.js</li>
 		<li>Windows</li>
 		<li>Linux</li>
 		<li>MacOS</li>
@@ -70,7 +72,7 @@
 		<li>VB</li>
 		<li>Node.js</li>
 		<li>SQL</li>
-		<li>PHP</li>
+		<li>Vue.js</li>
 		<li>Windows</li>
 		<li>Linux</li>
 		<li>MacOS</li>
@@ -83,16 +85,43 @@
 	<button>Random Knowledge</button>
 </div>
 <div class="middle-list">
-	<h2>WEB</h2>
+	<h2><a name="html">HTML</a></h2>
 	<ul class="web-map">
-		<li><h4>Beginner:</h4></li>
+		<li><h4>Comprehensive:</h4></li>
 		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+		<li><a href="https://www.w3school.com.cn/" title="W3school 在线教程">W3school</a></li>
+		<li><a href="https://www.runoob.com/" title="学的不仅是技术，更是梦想！">菜鸟教程</a></li>
 		<li><a href="https://www.sololearn.com/" title="SoloLearn: Learn to Code for Free!">Sololearn</a></li>
+		<li><a href="https://developer.mozilla.org/" title="MDN Web Docs">MDN</a></li>
+		<li><a href="https://www.codecademy.com/" title="Learn to Code - for Free | Codecademy">Codecademy</a></li>
+	</ul>
+	<ul class="web-map">
+		<li><h4>Question:</h4></li>
+		<li><a href="https://edabit.com/" title="700+ C++ Practice Challenges // Edabit">Edabit</a></li>
+		<li><a href="https://leetcode.com/" title="LeetCode - The World's Leading Online Programming Learning Platform">LeetCode</a></li>
 		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
 	</ul>
 	<ul class="web-map">
-		<li><h4>Intermediate:</h4></li>
+		<li><h4>Advanced:</h4></li>
 		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+	</ul>
+</div>
+<div class="middle-list">
+	<h2><a name="css">CSS</a></h2>
+	<ul class="web-map">
+		<li><h4>Comprehensive:</h4></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+		<li><a href="https://www.w3school.com.cn/" title="W3school 在线教程">W3school</a></li>
+		<li><a href="https://www.runoob.com/" title="学的不仅是技术，更是梦想！">菜鸟教程</a></li>
+		<li><a href="https://www.sololearn.com/" title="SoloLearn: Learn to Code for Free!">Sololearn</a></li>
+		<li><a href="https://developer.mozilla.org/" title="MDN Web Docs">MDN</a></li>
+		<li><a href="https://www.codecademy.com/" title="Learn to Code - for Free | Codecademy">Codecademy</a></li>
+	</ul>
+	<ul class="web-map">
+		<li><h4>Question:</h4></li>
+		<li><a href="https://edabit.com/" title="700+ C++ Practice Challenges // Edabit">Edabit</a></li>
 		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
 		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
 	</ul>
@@ -102,6 +131,111 @@
 		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
 		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
 	</ul>
+</div>
+<div class="middle-list">
+	<h2><a name="javascript">Javascript</a></h2>
+	<ul class="web-map">
+		<li><h4>Comprehensive:</h4></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+		<li><a href="https://www.w3school.com.cn/" title="W3school 在线教程">W3school</a></li>
+		<li><a href="https://www.runoob.com/" title="学的不仅是技术，更是梦想！">菜鸟教程</a></li>
+		<li><a href="https://www.sololearn.com/" title="SoloLearn: Learn to Code for Free!">Sololearn</a></li>
+		<li><a href="https://developer.mozilla.org/" title="MDN Web Docs">MDN</a></li>
+		<li><a href="https://www.codecademy.com/" title="Learn to Code - for Free | Codecademy">Codecademy</a></li>
+	</ul>
+	<ul class="web-map">
+		<li><h4>Question:</h4></li>
+		<li><a href="https://edabit.com/" title="700+ C++ Practice Challenges // Edabit">Edabit</a></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+	</ul>
+	<ul class="web-map">
+		<li><h4>Framework:</h4></li>
+		<li><a href="https://vuejs.org/" title="The Progressive JavaScript Framework">Vue.js</a></li>
+		<li><a href="https://angular.io/" title="One framework. Mobile & desktop">Angularjs</a></li>
+		<li><a href="https://reactjs.org/" title="A JavaScript library for building user interfaces">React</a></li>
+		<li><a href="https://getbootstrap.com/" title="Quickly design and customize responsive mobile-first sites with Bootstrap">Bootstrap</a></li>
+	</ul>
+</div>
+<div class="middle-list">
+	<h2><a name="jquery">jQuery</a></h2>
+	<ul class="web-map">
+		<li><h4>Comprehensive:</h4></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+		<li><a href="https://www.w3school.com.cn/" title="W3school 在线教程">W3school</a></li>
+		<li><a href="https://www.runoob.com/" title="学的不仅是技术，更是梦想！">菜鸟教程</a></li>
+		<li><a href="https://www.sololearn.com/" title="SoloLearn: Learn to Code for Free!">Sololearn</a></li>
+		<li><a href="https://developer.mozilla.org/" title="MDN Web Docs">MDN</a></li>
+		<li><a href="https://www.codecademy.com/" title="Learn to Code - for Free | Codecademy">Codecademy</a></li>
+	</ul>
+	<ul class="web-map">
+		<li><h4>Question:</h4></li>
+		<li><a href="https://edabit.com/" title="700+ C++ Practice Challenges // Edabit">Edabit</a></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+	</ul>
+	<ul class="web-map">
+		<li><h4>Advanced:</h4></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+	</ul>
+</div>
+<div class="middle-list">
+	<h2><a name="php">PHP</a></h2>
+	<ul class="web-map">
+		<li><h4>Comprehensive:</h4></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+		<li><a href="https://www.w3school.com.cn/" title="W3school 在线教程">W3school</a></li>
+		<li><a href="https://www.runoob.com/" title="学的不仅是技术，更是梦想！">菜鸟教程</a></li>
+		<li><a href="https://www.sololearn.com/" title="SoloLearn: Learn to Code for Free!">Sololearn</a></li>
+		<li><a href="https://developer.mozilla.org/" title="MDN Web Docs">MDN</a></li>
+		<li><a href="https://www.codecademy.com/" title="Learn to Code - for Free | Codecademy">Codecademy</a></li>
+	</ul>
+	<ul class="web-map">
+		<li><h4>Question:</h4></li>
+		<li><a href="https://edabit.com/" title="700+ C++ Practice Challenges // Edabit">Edabit</a></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+	</ul>
+	<ul class="web-map">
+		<li><h4>Advanced:</h4></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+	</ul>
+</div>
+<div class="middle-list">
+	<h2>More</h2>
+	<ul class="web-map">
+		<li><h4>Markdown:</h4></li>
+		<li><a href="https://www.markdownguide.org/" title="Markdown Guide">Markdownguide</a></li>
+		<li><a href="https://www.markdowntutorial.com/" title="Markdown Tutorial">Markdowntutorial</a></li>
+		<li><h4>RegExp:</h4></li>
+		<li><a href="https://regexr.com/" title="RegExr: Learn, Build, & Test RegEx">Regexr</a></li>
+		<li><a href="https://developer.mozilla.org/en/docs/Web/JavaScript/Guide/Regular_Expressions" title="MDN Web Docs">MDN</a></li>
+		<li><a href="https://regex101.com/" title="Online regex tester and debugger: PHP, PCRE, Python, Golang and JavaScript">regex101</a></li>
+		<li><a href="https://www.w3schools.com/jsref/jsref_obj_regexp.asp" title="W3Schools Online Web Tutorials">w3school</a></li>
+	</ul>
+	<ul class="web-map">
+		<li><h4>Community:</h4></li>
+		<li><a href="https://stackoverflow.com/questions" title="Newest Questions - Stack Overflow">Stackoverflow</a></li>
+		<li><a href="https://segmentfault.com/" title="一个专注于解决编程问题，提高开发技能的社区">Segmentfault</a></li>
+		<li><a href="https://www.v2ex.com/" title="中国最大的IT社区和服务平台">CNDS</a></li>
+		<li><a href="https://www.v2ex.com/" title="创意工作者的社区。讨论编程、设计、硬件、游戏等令人激动的话题">V2EX</a></li>
+		<li><a href="https://juejin.im/" title="掘金">掘金</a></li>
+		<li><a href="https://www.cnblogs.com/" title="博客模式的技术分享社区">博客园</a></li>
+		<li><a href="https://www.oschina.net/" title="目前中国最大的开源技术社区">开源中国</a></li>
+	</ul>
+	<ul class="web-map">
+		<li><h4>Videolearn:</h4></li>
+		<li><a href="https://www.imooc.com/" title="程序员的梦工厂">慕课网</a></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+	</ul>
+</div>
+<div class="return-top-button">
+	<p>TOP</p>
 </div>
 <script src="js/Javascript.js"></script>
 </body>
