--- a/Demo/The Code Map/index.html
+++ b/Demo/The Code Map/index.html
@@ -219,19 +219,36 @@
 	</ul>
 	<ul class="web-map">
 		<li><h4>Community:</h4></li>
-		<li><a href="https://stackoverflow.com/questions" title="Newest Questions - Stack Overflow">Stackoverflow</a></li>
-		<li><a href="https://segmentfault.com/" title="一个专注于解决编程问题，提高开发技能的社区">Segmentfault</a></li>
-		<li><a href="https://www.v2ex.com/" title="中国最大的IT社区和服务平台">CNDS</a></li>
-		<li><a href="https://www.v2ex.com/" title="创意工作者的社区。讨论编程、设计、硬件、游戏等令人激动的话题">V2EX</a></li>
-		<li><a href="https://juejin.im/" title="掘金">掘金</a></li>
-		<li><a href="https://www.cnblogs.com/" title="博客模式的技术分享社区">博客园</a></li>
-		<li><a href="https://www.oschina.net/" title="目前中国最大的开源技术社区">开源中国</a></li>
+		<li><a href="https://www.github.com/" title="The World Biggest Open Sources Share Website"><i class="list-icon"><img src="img/github.png" alt="github-logo"></i>Github</a></li>
+		<li><a href="https://stackoverflow.com/questions" title="Newest Questions - Stack Overflow"><i class="list-icon"><img src="img/stockoverflow.png" alt="stackoverflow-logo"></i>Stackoverflow</a></li>
+		<li><a href="https://www.csdn.net/" title="中国最大的IT社区和服务平台"><i class="list-icon"><img src="img/csdn.png" alt="csdn-logo"></i>CSDN</a></li>
+		<li><a href="https://segmentfault.com/" title="一个专注于解决编程问题，提高开发技能的社区"><i class="list-icon"><img src="img/segmentfault.png" alt="segmentfault-logo"></i>SegmentFault思否</a></li>
+		<li><a href="https://www.v2ex.com" title="创意工作者的社区。讨论编程、设计、硬件、游戏等令人激动的话题"><i class="list-icon"><img src="img/v2ex.png" alt="v2ex-logo"></i>V2ex</a></li>
+		<li><a href="https://www.w3ctech.com/" title="中国最大的前端技术社区"><i class="list-icon"><img src="img/w3ctech.png" alt="w3ctech-logo"></i>W3ctech</a></li>
+		<li><a href="https://www.cnblogs.com/" title="博客模式的技术分享社区"><i class="list-icon"><img src="img/cnblogs.png" alt="cnblogs-logo"></i>博客园</a></li>
+		<li><a href="https://www.gitee.com/" title="中国版Github"><i class="list-icon"><img src="img/gitee.png" alt="gitee-logo"></i>码云</a></li>
+		<li><a href="https://juejin.im/" title="前端技术大牛汇聚之地"><i class="list-icon"><img src="img/juejin.png" alt="juejin-logo"></i>掘金</a></li>
+		<li><a href="https://www.oschina.net/" title="目前中国最大的开源技术社区"><i class="list-icon"><img src="img/oschina.png" alt="oschina-logo"></i>开源中国</a></li>
+	</ul>
+	<ul class="web-map">
+		<li><h4>Settle:</h4></li>
+		<li><a href="https://azure.microsoft.com/" title="Microsoft Online Run Application Platform"><i class="list-icon"><img src="img/azure.png" alt="azure-logo"></i>Azure</a></li>
+		<li><a href="https://workers.cloudflare.com/" title="Using javascript to run somethings"><i class="list-icon"><img src="img/workers.png" alt="workers-logo"></i>Cloudflare Workers</a></li>
+		<li><a href="https://www.coding.net/" title="中国收购的国际代码云部署平台"><i class="list-icon"><img src="img/coding.png" alt="coding-logo"></i>Coding</a></li>
+		<li><a href="https://www.heroku.com/" title="A platform to run your application in the cloud"><i class="list-icon"><img src="img/heroku.png" alt="heroku-logo"></i>Heroku</a></li>
+		<li><a href="https://www.netlify.com/" title="Netlify: All-in-one platform for automating modern web projects"><i class="list-icon"><img src="img/netlify.png" alt="netlify-logo"></i>Netlify</a></li>
 	</ul>
 	<ul class="web-map">
 		<li><h4>Videolearn:</h4></li>
 		<li><a href="https://www.imooc.com/" title="程序员的梦工厂">慕课网</a></li>
 		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
 		<li><a href="https://www.w3schools.com/" title="W3Schools Online Web Tutorials">W3schools</a></li>
+	</ul>
+</div>
+<div class="useful-links">
+	<ul>
+		<li><h4>Links:</h4></li>
+		<li><a href="https://www.luckydesigner.space" title="行运设计师|有趣，有料，有深度">Luckydesigner.space</a></li>
 	</ul>
 </div>
 <div class="return-top-button">
